--- a/email-templates/digest-outlook.html
+++ b/email-templates/digest-outlook.html
@@ -219,12 +219,17 @@
 				font-weight: 600;
 			}
 
+			th.cell {
+				font-weight: 400;
+			}
+
 			.cell {
 				display: inline-block;
 				overflow: hidden;
 				text-overflow: ellipsis;
 				text-align: left;
 				color: #9d97aa;
+				font-size: 14px;
 			}
 
 			.cell-primary {
@@ -444,7 +449,7 @@
 
 						<div class="info-card">
 							<div class="card-header">
-								<h2>Sessions with the most errors</h2>
+								<h2>Most erroneous sessions</h2>
 								<h3>from last week</h3>
 							</div>
 
@@ -528,8 +533,10 @@
 								width="100%"
 							>
 								<tr class="row">
-									<th class="cell w-65">Error</th>
-									<th class="cell w-35 right">Amount</th>
+									<th class="cell w-50">Error</th>
+									<th class="cell w-50 right">
+										Amount (since last week)
+									</th>
 								</tr>
 								{{#each frequentErrors}}
 								<tr class="top-border row data">
@@ -558,20 +565,13 @@
 					want to receive emails like this in the future, you can
 					<a href="{{unsubscribeUrl}}">unsubscribe</a>.
 				</div>
-				<div class="company-info">
-					Stop wasting effort trying to track down and reproduce bugs.
-					Through session replay, Highlight shows you exactly how and
-					when your bugs happen. Highlight removes the mystery of
-					debugging.
-				</div>
-				<div class="company-address">123 Main St</div>
-				<div class="company-address">Seattle, WA 12345</div>
 				<img
 					class="logo-full"
 					src="https://static.highlight.io/assets/digest/highlight-logo.png"
 					width="70"
 					height="16"
 				/>
+				<div class="company-address">Seattle, WA 98122</div>
 			</div>
 		</div>
 	</body>
