More template + formatting changes (#3418)
## Summary
- nicer formatting for error message, identifier, country
- fork Outlook version of the template (there are a lot of differences
to get it to display somewhat nicely)
<!--
Ideally, there is an attached Linear ticket that will describe the
"why".

If relevant, use this section to call out any additional information
you'd like to _highlight_ to the reviewer.
-->

## How did you test this change?
- tested locally across a bunch of email clients
- used SendGrid's multi email client tests
<!--
Frontend - Leave a screencast or a screenshot to visually describe the
changes.
-->

## Are there any deployment considerations?
- no
<!--
 Backend - Do we need to consider migrations or backfilling data?
-->

--- a/email-templates/digest.html
+++ b/email-templates/digest.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--[if !mso]><!-->
 <html>
 	<head>
 		<meta charset="UTF-8" />
@@ -10,7 +11,6 @@
 
 			.body-container {
 				background-color: #0d0225;
-				color: #9d97aa;
 				width: 100%;
 				height: 100%;
 			}
@@ -19,6 +19,7 @@
 				max-width: 400px;
 				text-align: center;
 				margin: 0 auto;
+				padding: 0 16px;
 			}
 
 			.content-container > * {
@@ -64,7 +65,6 @@
 				color: #9d97aa;
 			}
 
-			th,
 			h3 {
 				font-size: 14px;
 				font-weight: 400;
@@ -72,17 +72,11 @@
 				line-height: 22px;
 			}
 
-			th,
-			td {
-				text-align: left;
-				color: #9d97aa;
-			}
-
 			th {
 				padding-bottom: 6px;
 			}
 
-			td {
+			.stats-grid td {
 				font-weight: 600;
 				padding-bottom: 8px;
 				padding-top: 8px;
@@ -97,10 +91,6 @@
 				text-overflow: ellipsis;
 				white-space: nowrap;
 				overflow: hidden;
-			}
-
-			.cell-primary-error {
-				color: #ffffff;
 			}
 
 			.top-border {
@@ -142,6 +132,11 @@
 			}
 
 			.right {
+				text-align: right;
+			}
+
+			table {
+				table-layout: fixed;
 			}
 
 			.stats-grid td {
@@ -154,7 +149,7 @@
 				margin-bottom: 24px;
 			}
 
-			table {
+			.stats-grid {
 				width: 100%;
 			}
 
@@ -219,6 +214,7 @@
 				padding-bottom: 8px;
 				padding-top: 8px;
 				text-align: left;
+				width: 100%;
 				display: flex;
 				gap: 0;
 			}
@@ -232,6 +228,20 @@
 				overflow: hidden;
 				text-overflow: ellipsis;
 				text-align: left;
+				color: #9d97aa;
+				font-size: 14px;
+			}
+
+			.cell-primary {
+				color: #ffffff;
+			}
+
+			.cell-primary a {
+				color: #ffffff;
+			}
+
+			a:hover .cell {
+				color: #72e4fc !important;
 			}
 
 			.right {
@@ -261,16 +271,19 @@
 				line-height: 20px;
 				padding-top: 24px;
 				padding-bottom: 16px;
+				color: #9d97aa;
 			}
 
 			.company-address {
 				font-size: 10px;
 				line-height: 16px;
+				color: #9d97aa;
 			}
 
 			.logo-full {
 				margin-top: 24px;
 				height: 16px;
+				width: 70px;
 			}
 		</style>
 	</head>
@@ -280,6 +293,8 @@
 				<img
 					class="logo"
 					src="https://static.highlight.io/assets/digest/logo-on-dark.png"
+					width="32"
+					height="32"
 				/>
 
 				<div class="header-container">
@@ -292,7 +307,7 @@
 				<div class="info-card">
 					<div class="card-header">
 						<h2>Last week's recap</h2>
-						<h3>Compared to the previous week</h3>
+						<h3>compared to the previous week</h3>
 					</div>
 
 					<table class="stats-grid">
@@ -302,6 +317,8 @@
 									<img
 										class="stat-icon"
 										src="https://static.highlight.io/assets/digest/user-group.png"
+										width="14"
+										height="14"
 									/>
 									Total users
 								</h3>
@@ -317,6 +334,8 @@
 									<img
 										class="stat-icon"
 										src="https://static.highlight.io/assets/digest/play-circle.png"
+										width="14"
+										height="14"
 									/>
 									Total sessions
 								</h3>
@@ -334,6 +353,8 @@
 									<img
 										class="stat-icon"
 										src="https://static.highlight.io/assets/digest/x-circle.png"
+										width="14"
+										height="14"
 									/>
 									Total errors
 								</h3>
@@ -349,6 +370,8 @@
 									<img
 										class="stat-icon"
 										src="https://static.highlight.io/assets/digest/clock.png"
+										width="14"
+										height="14"
 									/>
 									Avg active time
 								</h3>
@@ -373,20 +396,20 @@
 
 					<div>
 						<div class="row">
-							<span class="cell w-50">User</span>
-							<span class="cell w-30">Location</span>
-							<span class="cell w-20 right">Length</span>
+							<div class="cell w-50">User</div>
+							<div class="cell w-30">Location</div>
+							<div class="cell w-20 right">Length</div>
 						</div>
 						{{#each activeSessions}}
 						<a href="{{this.url}}">
 							<div class="top-border row data">
-								<span class="cell cell-primary w-50">
+								<div class="cell cell-primary w-50">
 									{{this.identifier}}
-								</span>
-								<span class="cell w-30">{{this.location}}</span>
-								<span class="cell w-20 right"
-									>{{this.activeLength}}</span
-								>
+								</div>
+								<div class="cell w-30">{{this.location}}</div>
+								<div class="cell w-20 right">
+									{{this.activeLength}}
+								</div>
 							</div>
 						</a>
 						{{/each}}
@@ -401,22 +424,20 @@
 
 					<div>
 						<div class="row">
-							<span class="cell w-50">User</span>
-							<span class="cell w-30"># Errors</span>
-							<span class="cell w-20 right">Length</span>
+							<div class="cell w-50">User</div>
+							<div class="cell w-30"># Errors</div>
+							<div class="cell w-20 right">Length</div>
 						</div>
 						{{#each errorSessions}}
 						<a href="{{this.url}}">
 							<div class="top-border row data">
-								<span class="cell cell-primary w-50">
+								<div class="cell cell-primary w-50">
 									{{this.identifier}}
-								</span>
-								<span class="cell w-30"
-									>{{this.errorCount}}</span
-								>
-								<span class="cell w-20 right"
-									>{{this.activeLength}}</span
-								>
+								</div>
+								<div class="cell w-30">{{this.errorCount}}</div>
+								<div class="cell w-20 right">
+									{{this.activeLength}}
+								</div>
 							</div>
 						</a>
 						{{/each}}
@@ -433,18 +454,18 @@
 
 					<div>
 						<div class="row">
-							<span class="cell w-65">Error</span>
-							<span class="cell w-35 right">Affected Users</span>
+							<div class="cell w-65">Error</div>
+							<div class="cell w-35 right">Affected Users</div>
 						</div>
 						{{#each newErrors}}
 						<a href="{{this.url}}">
 							<div class="top-border row data">
-								<span class="cell cell-primary w-75">
+								<div class="cell cell-primary w-75">
 									{{this.message}}
-								</span>
-								<span class="cell w-25 right"
-									>{{this.affectedUserCount}}</span
-								>
+								</div>
+								<div class="cell w-25 right">
+									{{this.affectedUserCount}}
+								</div>
 							</div>
 						</a>
 						{{/each}}
@@ -459,21 +480,23 @@
 
 					<div>
 						<div class="row">
-							<span class="cell w-65">Error</span>
-							<span class="cell w-35 right">Amount</span>
+							<div class="cell w-50">Error</div>
+							<div class="cell w-50 right">
+								Amount (since last week)
+							</div>
 						</div>
 						{{#each frequentErrors}}
 						<a href="{{this.url}}">
 							<div class="top-border row data">
-								<span class="cell cell-primary w-65">
+								<div class="cell cell-primary w-65">
 									{{this.message}}
-								</span>
-								<span class="cell w-35 right">
+								</div>
+								<div class="cell w-35 right">
 									<span>{{this.count}}</span>
-									<span class="stat-delta"
-										>{{this.delta}}</span
-									>
-								</span>
+									<span class="stat-delta">
+										{{this.delta}}
+									</span>
+								</div>
 							</div>
 						</a>
 						{{/each}}
@@ -482,23 +505,20 @@
 			</div>
 			<div class="footer">
 				<div class="unsubscribe-info">
-					This digest was sent to {{toEmail}}. If you don't want to
-					receive emails like this in the future, you can
+					This digest was sent to
+					<a href="mailto:{{toEmail}}">{{toEmail}}</a>. If you don't
+					want to receive emails like this in the future, you can
 					<a href="{{unsubscribeUrl}}">unsubscribe</a>.
 				</div>
-				<div class="company-info">
-					Stop wasting effort trying to track down and reproduce bugs.
-					Through session replay, Highlight shows you exactly how and
-					when your bugs happen. Highlight removes the mystery of
-					debugging.
-				</div>
-				<div class="company-address">123 Main St</div>
-				<div class="company-address">Seattle, WA 12345</div>
 				<img
 					class="logo-full"
 					src="https://static.highlight.io/assets/digest/highlight-logo.png"
+					width="70"
+					height="16"
 				/>
+				<div class="company-address">Seattle, WA 98122</div>
 			</div>
 		</div>
 	</body>
 </html>
+<!--<![endif]-->
